namespaces/moodle-probando6/qa/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: moodle-probando6-qa
  labels:
    k10/injectKanisterSidecar: "true"
  annotations:
    kustomize.toolkit.fluxcd.io/prune: disabled
