namespaces/moodle-probando6/qa/services.yml
apiVersion: v1
kind: Service
metadata:
  name: moodle-app-svc
  namespace: moodle-probando6-qa
spec:
  ports:
    - port: 8080
      protocol: TCP
  selector:
    app: moodle-app
